--- a/src/index.css
+++ b/src/index.css
@@ -6,16 +6,21 @@
 
 html {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  background: #333;
-  color: whitesmoke;
 }
 
 body {
   min-height: 100vh;
-  font-size: 1.5rem;
-  padding: 0 10% 10%;
 }
 
+::-webkit-scrollbar {
+  width: 5px;
+  background-color: #fff;
+}
+::-webkit-scrollbar-thumb {
+  border: 1px solid #fff;
+  background-color: rgb(205, 203, 203);
+  border-radius: 10px;
+}
 input,
 textarea,
 button,
@@ -24,20 +29,23 @@ select {
   margin-bottom: 1em;
 }
 
-main {
-  max-width: 500px;
-  margin: auto;
-}
-
-section {
-  margin-top: 1em;
+.container {
+  padding-left: 4rem;
+  padding-right: 4rem;
+  margin: 0 auto;
 }
 
 article {
   margin: 0.5em 0.5em 0.5em 0;
-  border: 1px solid whitesmoke;
+  border: 2px solid whitesmoke;
   border-radius: 10px;
   padding: 1em;
+  transition: box-shadow 0.2s ease-in-out;
+}
+article:hover {
+  -webkit-box-shadow: -4px 4px 20px -4px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: -4px 4px 20px -4px rgba(0, 0, 0, 0.29);
+  box-shadow: -4px 4px 20px -4px rgba(0, 0, 0, 0.29);
 }
 
 h1 {
@@ -54,17 +62,97 @@ p {
 form {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+form input,
+form select,
+form textarea {
+  border: 2px solid #ccc;
+  outline: none;
+  border-radius: 6px;
+  padding: 10px;
+  width: 50%;
+}
+form select {
+  cursor: pointer;
+}
+form textarea {
+  resize: vertical;
+}
+form button {
+  background-color: cadetblue;
+  border: none;
+  color: white;
+  outline: none;
+  border-radius: 6px;
+  margin: 0 auto;
+  padding: 10px;
+  cursor: pointer;
+}
+form button:active {
+  opacity: 0.5;
 }
 
 .postCredit {
   font-size: 1rem;
+  display: grid;
+  align-items: center;
+  flex-wrap: wrap;
+  grid-template-columns: repeat(1, 100%);
 }
 
 .reactionButton {
   margin: 0 0.25em 0 0;
   background: transparent;
   border: none;
-  color: whitesmoke;
   font-size: 1rem;
   cursor: pointer;
+}
+.reactions {
+  display: grid;
+  justify-content: space-between;
+  align-items: center;
+  grid-auto-flow: column;
+}
+.link {
+  color: inherit;
+}
+.posts {
+  display: grid;
+  grid-template-columns: repeat(1, auto);
+}
+.actions {
+  display: flex;
+  gap: 1em;
+}
+.navbar {
+  padding: 1rem;
+  text-align: center;
+  font-size: 1.5rem;
+  -webkit-box-shadow: -4px 4px 20px -4px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: -4px 4px 20px -4px rgba(0, 0, 0, 0.29);
+  box-shadow: -4px 4px 5px -4px rgba(0, 0, 0, 0.29);
+  margin-bottom: 20px;
+  user-select: none;
+}
+.navbar .container {
+  display: flex;
+  justify-content: space-between;
+}
+.navbar ul {
+  list-style-type: none;
+}
+.navbar a {
+  color: inherit;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .posts {
+    grid-template-columns: repeat(2, auto);
+  }
+}
+@media (min-width: 991px) {
+  .posts {
+    grid-template-columns: repeat(3, auto);
+  }
 }
