--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,28 @@ body {
   background-color: rgb(205, 203, 203);
   border-radius: 10px;
 }
+.userList {
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  margin: 10px 0;
+}
+.userList li a {
+  font-size: 1.5rem;
+  text-decoration: none;
+  background-color: #ccc;
+  padding: 0.5rem;
+  border-radius: 6px;
+  display: block;
+  color: inherit;
+  transition: color, background-color 0.3s ease-in-out;
+}
+
+.userList li a:hover {
+  background-color: #333;
+  color: white;
+}
 input,
 textarea,
 button,
@@ -30,8 +52,8 @@ select {
 }
 
 .container {
-  padding-left: 4rem;
-  padding-right: 4rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
   margin: 0 auto;
 }
 
@@ -71,7 +93,7 @@ form textarea {
   outline: none;
   border-radius: 6px;
   padding: 10px;
-  width: 50%;
+  width: 100%;
 }
 form select {
   cursor: pointer;
@@ -80,14 +102,19 @@ form textarea {
   resize: vertical;
 }
 form button {
-  background-color: cadetblue;
   border: none;
   color: white;
   outline: none;
   border-radius: 6px;
-  margin: 0 auto;
+  width: 100%;
   padding: 10px;
   cursor: pointer;
+}
+form button:nth-child(odd) {
+  background-color: cadetblue;
+}
+form button:nth-child(even) {
+  background-color: red;
 }
 form button:active {
   opacity: 0.5;
@@ -100,19 +127,51 @@ form button:active {
   flex-wrap: wrap;
   grid-template-columns: repeat(1, 100%);
 }
+.reactions {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* flex-direction: column; */
+  position: relative;
+}
 
+.reactions-content {
+  transition: all 0.3s ease-in-out;
+  position: absolute;
+  bottom: 35px;
+  left: 0;
+  background-color: #e7e6e6;
+  padding: 5px;
+  border-radius: 6px;
+}
 .reactionButton {
-  margin: 0 0.25em 0 0;
+  margin: 0 5px;
   background: transparent;
   border: none;
   font-size: 1rem;
   cursor: pointer;
+  transition: 0.3s ease;
 }
-.reactions {
-  display: grid;
-  justify-content: space-between;
-  align-items: center;
-  grid-auto-flow: column;
+.reactions .reactionButton:hover {
+  transform: scale(1.3);
+}
+.reactions .like {
+  cursor: pointer;
+  margin: 0;
+  padding: 0.3rem;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #0000004a;
+  -webkit-box-shadow: -4px 4px 20px -4px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: -4px 4px 20px -4px rgba(0, 0, 0, 0.29);
+  box-shadow: -4px 4px 5px -4px rgba(0, 0, 0, 0.29);
+}
+
+.show {
+  transform: scale(1);
+}
+.hide {
+  transform: scale(0);
 }
 .link {
   color: inherit;
@@ -128,7 +187,7 @@ form button:active {
 .navbar {
   padding: 1rem;
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   -webkit-box-shadow: -4px 4px 20px -4px rgba(0, 0, 0, 0.29);
   -moz-box-shadow: -4px 4px 20px -4px rgba(0, 0, 0, 0.29);
   box-shadow: -4px 4px 5px -4px rgba(0, 0, 0, 0.29);
@@ -138,21 +197,66 @@ form button:active {
 .navbar .container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .navbar ul {
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
+.navbar li button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
+
 .navbar a {
   color: inherit;
+  text-decoration: none;
+}
+.delete__btn {
+  border: none;
+  background: transparent;
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
   .posts {
     grid-template-columns: repeat(2, auto);
   }
+  form input,
+  form select,
+  form textarea {
+    width: 50%;
+  }
+  .navbar {
+    font-size: 1.2rem;
+  }
+  .container {
+    padding-left: 4rem;
+    padding-right: 4rem;
+    margin: 0 auto;
+  }
 }
 @media (min-width: 991px) {
   .posts {
     grid-template-columns: repeat(3, auto);
+  }
+  form input,
+  form select,
+  form textarea {
+    width: 50%;
+  }
+  .navbar {
+    font-size: 1.5rem;
+  }
+  .container {
+    padding-left: 4rem;
+    padding-right: 4rem;
+    margin: 0 auto;
   }
 }
